chore: update to new quotes api
